# brr

./: .gitignore  IDEAS.md  README.md  pyproject.toml
examples/: basic_search.py  hash_only.py
src/brr/: __init__.py  cli.py  config.py
src/brr/core/: __init__.py  canonicalize.py  errors.py  protocols.py  query_class.py  types.py
src/brr/embed/: __init__.py  fastembed_embedder.py  hash_embedder.py  model2vec_embedder.py  stack.py
src/brr/fusion/: __init__.py  blend.py  normalize.py  rrf.py  two_tier.py
src/brr/index/: __init__.py  search.py  vector_index.py
src/brr/lexical/: __init__.py  bm25s_backend.py
tests/: conftest.py  test_blend.py  test_bm25s_backend.py  test_canonicalize.py  test_hash_embedder.py  test_integration.py  test_query_class.py  test_rrf.py  test_two_tier.py  test_vector_index.py
