[project]
name = "brr"
version = "0.1.0"
description = "brr goes vroom. Two-tier hybrid search that yields results before you finish blinking."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
model2vec = ["model2vec>=0.4"]
fastembed = ["fastembed>=0.4"]
lexical = ["bm25s[full]>=0.2"]
full = [
    "model2vec>=0.4",
    "fastembed>=0.4",
    "bm25s[full]>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
]

[project.scripts]
brr = "brr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download ML models",
    "lexical: tests requiring bm25s",
]
